--- a/work/templates/work/cleaning.html
+++ b/work/templates/work/cleaning.html
@@ -15,7 +15,7 @@
   <header>
     <div class="container header-container">
         <div class="logo">
-            <img src="{% static 'work/image/logo.png' %}" alt="NewRealm Logo">
+            <img src="{% static 'work/image/Logo.jpg' %}" alt="NewRealm Logo">
             <span class="logo-text">NewRealm Multi Biz</span>
         </div>
         <button class="mobile-menu-btn" id="mobileMenuBtn">
