--- a/work/templates/work/index.html
+++ b/work/templates/work/index.html
@@ -71,15 +71,15 @@
                         </div>
                         <h3>Recruitment</h3>
                         <p>We connect businesses with top-tier administrative and domestic staff.</p>
-                        <a href="recruitment.html" class="btn">Learn More</a>
+                        <a href="{% url 'recruitment' %}" class="btn">Learn More</a>
                     </div>
                     <div class="service-card">
                             <div class="service-icon">
                                 <i class="fas fa-users"></i>
                             </div>
-                            <h3>Estate Management></h3>
+                            <h3>Estate Management</h3>
                             <p>Comprehensive property and facility management services to protect and enhance your real estate investments.</p>
-                            <a href="recruitment.html" class="btn">Learn More</a>
+                            <a href="{% url 'estate-management' %}" class="btn">Learn More</a>
                     </div>
                     <div class="service-card">
                         <div class="service-icon">
@@ -87,7 +87,7 @@
                         </div>
                         <h3>Cleaning Services</h3>
                         <p>Professional, thorough, and eco-friendly cleaning solutions.</p>
-                        <a href="cleaning.html" class="btn">Learn More</a>
+                        <a href="{% url 'cleaning' %}" class="btn">Learn More</a>
                     </div>
                     <div class="service-card">
                         <div class="service-icon">
@@ -95,7 +95,7 @@
                         </div>
                         <h3>Skills Training</h3>
                         <p>Empowering individuals with practical skills for career growth.</p>
-                        <a href="training.html" class="btn">Learn More</a>
+                        <a href="{% url 'training' %}" class="btn">Learn More</a>
                     </div>
                     <div class="service-card">
                         <div class="service-icon">
@@ -103,7 +103,7 @@
                         </div>
                         <h3>Enterpreneurship Education</h3>
                         <p>Equipping individuals with innovative thinking and business skills to start and grow successful ventures.</p>
-                        <a href="cleaning.html" class="btn">Learn More</a>
+                        <a href="{% url 'enterpreneurship' %}" class="btn">Learn More</a>
                     </div>
                     <div class="service-card">
                         <div class="service-icon">
@@ -111,7 +111,7 @@
                         </div>
                         <h3>Consultancy Services</h3>
                         <p>Expert guidance and strategic solutions tailored to your business needs.</p>
-                        <a href="cleaning.html" class="btn">Learn More</a>
+                        <a href="{% url 'consultancy' %}" class="btn">Learn More</a>
                     </div>
                 </div>
             </div>
